--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
+
+
+
 <head>
 
     <meta charset="UTF-8">
@@ -39,7 +43,7 @@
                     <div class="card-body">
                         <form role="form">
                             <div class="form-group">
-                                <label for="search">Search Term:</label>
+                                <label for="search">Search for a Meme:</label>
                                 <input type="text" class="form-control" id="search-term">
                             </div>
                             <button type="submit" class="btn btn-default" id="run-search">
@@ -57,13 +61,27 @@
                     <div class="card">
                         <div class="card-header">
                             <strong>
-                                <i class="giphy-table list-group" id=""> buttons</i></strong>
+                                <i class="giphy-table list-group" id=""> Select a Meme</i></strong>
                         </div>
                         <div class="card-body" id="buttons-view">
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <br>
+                    <div class="card">
+                        <div class="card-header">
+                            <strong>
+                                <i class="trans-table"> Translator</i></strong>
+                        </div>
+                        <div class="card-body" id="trans-section">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        
         <div class="row">
             <div class="col-sm-12">
                 <br>
@@ -77,19 +95,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-12">
-                <br>
-                <div class="card">
-                    <div class="card-header">
-                        <strong>
-                            <i class="trans-table"> Translator</i></strong>
-                    </div>
-                    <div class="card-body" id="trans-section">
-                    </div>
-                </div>
-            </div>
-        </div>
+        
 
     </div>
     <script src="https://code.jquery.com/jquery.js"></script>
