--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             line-height: 1.5;
         }
     </style>
-
+    
 </head>
 
 <body>
     <div class="container">
-        <div class="jumbotron" style="background-color: rgb(69, 190, 170) ; color: white;">
+        <div class="jumbotron" style="background-color: rgb(236, 129, 57) ; color: white;">
             <h1 class="text-center">
                 <strong>
-                    <i class="fa fa-newspaper-o">Yoda Meme Generator</i></strong>
+                    <i>Yoda Meme Generator</i></strong>
             </h1>
         </div>
         <div class="row">
