css styling started

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 
 <head>
+    <link rel="stylesheet" type="text/css" href="./assets/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade&display=swap" rel="stylesheet">
 
     <meta charset="UTF-8">
     <title>Giphy Search</title>
@@ -26,7 +28,7 @@
 
 <body>
     <div class="container">
-        <div class="jumbotron" style="background-color: rgb(236, 129, 57) ; color: white;">
+        <div class="jumbotron" style="background-color: rgb(144, 207, 50) ; color: white;">
             <h1 class="text-center">
                 <strong>
                     <i>Yoda Meme Generator</i></strong>
