--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 
 <head>
+    <link rel="stylesheet" type="text/css" href="./assets/reset.css">
+    
     <link rel="stylesheet" type="text/css" href="./assets/style.css">
     <link href="https://fonts.googleapis.com/css?family=Bungee+Shade&display=swap" rel="stylesheet">
 
