--- a/index.html
+++ b/index.html
@@ -47,8 +47,31 @@
                     <div class="card-body">
                         <form role="form">
                             <div class="form-group">
-                                <label for="search">Search for a Meme:</label>
-                                <input type="text" class="form-control" id="search-term">
+                                <label for="search">Translate to Yoda Speak:</label>
+                                <input type="text" class="form-control" id="yoda-term">
+                            </div>
+                            <button type="submit" class="btn btn-default" id="run-search">
+                                <i class="giphy-search"> Search</i></button>
+                            <button class="btn btn-default" id="clear-all">
+                                <i class="giphy-trash"> Clear Results</i></button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <br>
+                <div class="card">
+                    <div class="card-header">
+                        <strong>
+                            <i class="giphy-list-alt"> Search Parameters</i></strong>
+                    </div>
+                    <div class="card-body">
+                        <form role="form">
+                            <div class="form-group">
+                                <label for="search">Search for a meme:</label>
+                                <input type="text" class="form-control" id="meme-term">
                             </div>
                             <button type="submit" class="btn btn-default" id="run-search">
                                 <i class="giphy-search"> Search</i></button>
