changed where image appears

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
     <link rel="stylesheet" type="text/css" href="./assets/style.css">
     <link href="https://fonts.googleapis.com/css?family=Bungee+Shade&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Hairline&display=swap" rel="stylesheet">
 
     <meta charset="UTF-8">
     <title>Giphy Search</title>
@@ -103,7 +104,7 @@
                             <strong>
                                 <i class="giphy-table list-group" id=""> Select a Meme</i></strong>
                         </div>
-                        <div class="card-body" id="trans-section">
+                        <div class="card-body" id="meme-section">
                         </div>
                     </div>
                 </div>
@@ -118,7 +119,7 @@
                         <strong>
                             <i class="meme-table"> Results</i></strong>
                     </div>
-                    <div class="card-body" id="meme-section">
+                    <div class="card-body" id="trans-section">
                     </div>
                 </div>
             </div>
