url format for image search works

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                 <label for="search">Search for a meme:</label>
                                 <input type="text" class="form-control" id="meme-term">
                             </div>
-                            <button type="submit" class="btn btn-default" id="run-search">
+                            <button type="submit" class="btn btn-default" id="meme-search">
                                 <i class="giphy-search"> Search</i></button>
                             <button class="btn btn-default" id="clear-all">
                                 <i class="giphy-trash"> Clear Results</i></button>
