small changes to make page look clearer

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="card-body">
                         <form role="form">
                             <div class="form-group">
-                                <label for="search">Translate to Yoda Speak:</label>
+                                <label for="search" class="instructions">Translate to Yoda Speak:</label>
                                 <input type="text" class="form-control" id="yoda-term">
                             </div>
                             <button type="submit" class="btn btn-default" id="run-search">
@@ -93,7 +93,7 @@
                     <div class="card-body">
                         <form role="form">
                             <div class="form-group">
-                                <label for="search">Search for a meme:</label>
+                                <label for="search" class="instructions">Search for a meme:</label>
                                 <input type="text" class="form-control" id="meme-term">
                             </div>
                             <button type="submit" class="btn btn-default" id="meme-search">
