user input now adds to canvas

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
                             <br>
                             <label for="search" class="instructions">Enter Top Text Here:</label>
                             <input type="text" class="form-control" id="top-text">
+                            <button type="button" id="top-btn" class="btn btn-primary">Primary</button>
                             <br>
                             <div class="row">
                                 <div class="col-md-12">
