added firebase cdn and initialized firebase

--- a/index.html
+++ b/index.html
@@ -137,12 +137,14 @@
                             <br>
                             <label for="search" class="instructions">Enter Top Text Here:</label>
                             <input type="text" class="form-control" id="top-text">
-                            <button type="button" id="top-btn" class="btn btn-primary">Primary</button>
                             <br>
                             <div class="row">
                                 <div class="col-md-12">
                                     <label for="search" class="instructions">Enter Bottom Text Here:</label>
                                     <input type="text" class="form-control" id="bottom-text">
+                                    <br>
+                                    <button type="button" id="top-btn" class="btn btn-primary">Add Text</button>
+                                    <button type="button" class="btn btn-success">Submit Meme</button>
                                 </div>
                             </div>
                         </div>
@@ -158,6 +160,8 @@
         <script src="https://code.jquery.com/jquery.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js">
         </script>
+        <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
         <script src="assets/logic.js"></script>
 </body>
 
