--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
                     <div class="row card-body" id="row">
                         <div class="col-md-6">
-                            <canvas id="myCanvas" width="480px" height="480"></canvas>
+                            <canvas id="myCanvas" width="480px" height="480px"></canvas>
                         </div>
                         <div class="col-md-2"></div>
                         <div class="col-md-3">
@@ -144,7 +144,7 @@
                                     <input type="text" class="form-control" id="bottom-text">
                                     <br>
                                     <button type="button" id="top-btn" class="btn btn-primary">Add Text</button>
-                                    <button type="button" class="btn btn-success">Submit Meme</button>
+                                    <button type="button" id="submit-btn" class="btn btn-success">Submit Meme</button>
                                 </div>
                             </div>
                         </div>
@@ -158,10 +158,14 @@
 
 
         <script src="https://code.jquery.com/jquery.js"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js">
         </script>
-        <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-database.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-storage.js"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js"></script> -->
         <script src="assets/logic.js"></script>
 </body>
 
