major debugging, user can make memes again

--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
                                                     <br> <br>
                                                     <input type="text" class="form-control" id="bottom-text">
                                                     <br><br>
-                                                    <button type="button" id="top-btn" class="btn btn-primary">Add Text</button>
+                                                    <button type="button" id="top-btn" class="btn btn-primary">Add
+                                                        Text</button>
                                                     <button type="button" class="btn btn-success">Submit Meme</button>
                                                 </div>
                                             </div>
@@ -160,8 +161,8 @@
         <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-database.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-storage.js"></script>
         <script src="https://code.jquery.com/jquery.js"></script>
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js">
+        </script>
         <script src="assets/logic.js"></script>
 </body>
 
