turned on firebase, added comments about it

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                                     <br><br>
                                                     <button type="button" id="top-btn" class="btn btn-primary">Add
                                                         Text</button>
-                                                    <button type="button" class="btn btn-success">Submit Meme</button>
+                                                    <button type="button" id="submit-btn" class="btn btn-success">Submit Meme</button>
                                                 </div>
                                             </div>
                                         </div>
