yemi and me fixed the background to twinkle, still have to add media query

--- a/index.html
+++ b/index.html
@@ -22,133 +22,126 @@
 </head>
 
 <body>
-    <div class="cloud">
-        <div class="stars">
-            <div class="twinkling">
-                <div class="background-animation stars twinkling">
-                    <div class="container">
-                        <div class="jumbotron" style="background-color: rgb(191, 255, 138) ; color: white;">
-                            <h1 class="text-center">
-                                <strong>
-                                    <i>Yoda Meme Generator</i></strong>
-                            </h1>
 
+
+    <div class="container">
+        <div class="background-animation">
+            <div class="stars">
+                <div class="twinkling">
+
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+
+                <div class="  adjustWidth" style="position: absolute;z-index:5 ; height: 10%;color: white;">
+                    <h1 class="text-center">
+                        <strong>
+                            <i>Yoda Meme Generator</i></strong>
+                    </h1>
+                </div>
+            </div>
+        </div>
+        <div class="pushDown">
+            <div class="row">
+                <div class="col-sm-12">
+                    <br>
+                    <div class="card adjustWidth">
+                        <div class="card-header">
+                            <strong>
+                                <i class="giphy-list-alt"> Search Parameters</i></strong>
+                        </div>
+                        <div class="card-body">
+                            <form role="form">
+                                <div class="form-group">
+                                    <label for="search" class="instructions">Translate to Yoda
+                                        Speak:</label>
+                                    <input type="text" class="form-control" id="yoda-term">
+                                </div>
+                                <button type="submit" class="btn btn-default" id="run-search">
+                                    <i class="giphy-search"> Search</i></button>
+                                <button class="btn btn-default" id="clear-all">
+                                    <i class="giphy-trash"> Clear Results</i></button>
+                            </form>
                         </div>
                     </div>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-12">
-
-                                <div class="  adjustWidth"
-                                    style="position: absolute;z-index:5 ; height: 10%;color: white;">
-                                    <h1 class="text-center">
-                                        <strong>
-                                            <i>Yoda Meme Generator</i></strong>
-                                    </h1>
-                                </div>
-                            </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <br>
+                    <div class="card adjustWidth">
+                        <div class="card-header">
+                            <strong>
+                                <i class="trans-table"> Translator</i></strong>
                         </div>
-                        <div class="pushDown">
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <br>
-                                    <div class="card adjustWidth">
-                                        <div class="card-header">
-                                            <strong>
-                                                <i class="giphy-list-alt"> Search Parameters</i></strong>
-                                        </div>
-                                        <div class="card-body">
-                                            <form role="form">
-                                                <div class="form-group">
-                                                    <label for="search" class="instructions">Translate to Yoda
-                                                        Speak:</label>
-                                                    <input type="text" class="form-control" id="yoda-term">
-                                                </div>
-                                                <button type="submit" class="btn btn-default" id="run-search">
-                                                    <i class="giphy-search"> Search</i></button>
-                                                <button class="btn btn-default" id="clear-all">
-                                                    <i class="giphy-trash"> Clear Results</i></button>
-                                            </form>
-                                        </div>
-                                    </div>
+                        <div class="card-body" id="buttons-view">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 ">
+                    <br>
+                    <div class="card adjustWidth">
+                        <div class="card-header">
+                            <strong>
+                                <i class="giphy-list-alt"> Search Parameters</i></strong>
+                        </div>
+                        <div class="card-body">
+                            <form role="form">
+                                <div class="form-group">
+                                    <label for="search" class="instructions">Search for a meme:</label>
+                                    <input type="text" class="form-control" id="meme-term">
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <br>
-                                    <div class="card adjustWidth">
-                                        <div class="card-header">
-                                            <strong>
-                                                <i class="trans-table"> Translator</i></strong>
-                                        </div>
-                                        <div class="card-body" id="buttons-view">
-                                        </div>
-                                    </div>
+                                <button type="submit" class="btn btn-default" id="meme-search">
+                                    <i class="giphy-search"> Search</i></button>
+                                <button class="btn btn-default" id="clear-all">
+                                    <i class="giphy-trash"> Clear Results</i></button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <br>
+                    <div class="card adjustWidth">
+                        <div class="card-header">
+                            <strong>
+                                <i class="giphy-table list-group" id=""> Select a Meme</i></strong>
+                        </div>
+                        <div class="card-body" id="meme-section">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <br>
+                    <div class="card adjustWidth">
+                        <div class="card-header">
+                            <strong>
+                                <i class="meme-table"> Results</i></strong>
+                        </div>
+                        <div class="card-body" id="trans-section">
+                            <div class="row card-body" id="row">
+                                <div class="col-md-6">
+                                    <canvas id="myCanvas" width="480px" height="480px"></canvas>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-12 ">
-                                    <br>
-                                    <div class="card adjustWidth">
-                                        <div class="card-header">
-                                            <strong>
-                                                <i class="giphy-list-alt"> Search Parameters</i></strong>
-                                        </div>
-                                        <div class="card-body">
-                                            <form role="form">
-                                                <div class="form-group">
-                                                    <label for="search" class="instructions">Search for a meme:</label>
-                                                    <input type="text" class="form-control" id="meme-term">
-                                                </div>
-                                                <button type="submit" class="btn btn-default" id="meme-search">
-                                                    <i class="giphy-search"> Search</i></button>
-                                                <button class="btn btn-default" id="clear-all">
-                                                    <i class="giphy-trash"> Clear Results</i></button>
-                                            </form>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <br>
-                                    <div class="card adjustWidth">
-                                        <div class="card-header">
-                                            <strong>
-                                                <i class="giphy-table list-group" id=""> Select a Meme</i></strong>
-                                        </div>
-                                        <div class="card-body" id="meme-section">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <br>
-                                    <div class="card adjustWidth">
-                                        <div class="card-header">
-                                            <strong>
-                                                <i class="meme-table"> Results</i></strong>
-                                        </div>
-                                        <div class="card-body" id="trans-section">
-                                            <div class="row card-body" id="row">
-                                                <div class="col-md-6">
-                                                    <canvas id="myCanvas" width="480px" height="480px"></canvas>
-                                                </div>
-                                                <div class="col-md-2"></div>
-                                                <div class="col-md-3">
-                                                    <br> <br>
-                                                    <input type="text" class="form-control" id="top-text">
-                                                    <br> <br>
-                                                    <input type="text" class="form-control" id="bottom-text">
-                                                    <br><br>
-                                                    <button type="button" id="top-btn" class="btn btn-primary">Add
-                                                        Text</button>
-                                                    <button type="button" class="btn btn-success">Submit Meme</button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                <div class="col-md-2"></div>
+                                <div class="col-md-3">
+                                    <br> <br>
+                                    <label for="search" class="instructions">Enter Top Text Here:</label>
+                                    <input type="text" class="form-control" id="top-text">
+                                    <br> <br>
+                                    <label for="search" class="instructions">Enter Bottom Text Here:</label>
+                                    <input type="text" class="form-control" id="bottom-text">
+                                    <br><br>
+                                    <button type="button" id="top-btn" class="btn btn-primary">Add
+                                        Text</button>
+                                    <button type="button" class="btn btn-success">Submit Meme</button>
                                 </div>
                             </div>
                         </div>
@@ -156,14 +149,16 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-database.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-storage.js"></script>
-        <script src="https://code.jquery.com/jquery.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js">
-        </script>
-        <script src="assets/logic.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-storage.js"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js">
+    </script>
+    <script src="assets/logic.js"></script>
 </body>
 
 </html>
