--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                         Speak:</label>
                                     <input type="text" class="form-control" id="yoda-term">
                                 </div>
-                                <button type="submit" class="btn btn-default" id="run-search">
+                                <button type="submit" class="btn btn-default" id="term-search">
                                     <i class="giphy-search"> Search</i></button>
                                 <button class="btn btn-default" id="clear-all">
                                     <i class="giphy-trash"> Clear Results</i></button>
